fix: UI fix; delete deployment on branch delete

--- a/project/app/src/html/index.html
+++ b/project/app/src/html/index.html
@@ -103,6 +103,7 @@
                     const newTodo = await response.json();
                     this.todos = [...this.todos, newTodo];
                     this.newTodoText = '';
+                    await this.fetchTodos();
                 } catch (error) {
                     console.error("Error adding todo:", error);
                 }
